# anuncios

./: .gitignore  README.md  pyproject.toml
src/anuncios/: forms.py  models.py  run.py
src/anuncios/templates/: ad_view.html  base_template.html  detalle.html  form.evento.html  form_registro.html  index.html  por_categoria.html  signup_form.html
src/anuncios/templates/admin/: ad_form.html
