[project]
name = "anuncios"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hash (Stivens)", email = "jhonatan.barrera@mercadolibre.com.co" }
]
dependencies = [
    "flask>=3.1.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anuncios"]
