[project]
name = "anuncios"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hash (Stivens)", email = "jhonatan.barrera@mercadolibre.com.co" }
]
dependencies = [
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "email-validator>=2.3.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg>=3.2.10",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anuncios"]
